--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -736,6 +736,32 @@ publisher = {IEEE Computer Society},
  }
 
 
+@PhdThesis{Kelly98arguingsafety,
+  author = 	 {Timothy Patrick Kelly}},
+  title = 	 {Arguing Safety -- A Systematic Approach to Managing Safety Cases},
+  school = 	 {University of York},
+  year = 	 {1998}
+}
+
+@Book{Levenson,
+  author = 	 {Nancy G. Leveson},
+  title = 	 {Engineering a Safer World: Systems Thinking Applied to Safety},
+  publisher = 	 {MIT Press},
+  year = 	 {2012}
+}
+
+@misc{SAE4761,
+    address = {Warrendale, USA},
+    citeulike-article-id = {6819866},
+    keywords = {standard},
+    month = dec,
+    posted-at = {2010-03-12 08:24:45},
+    priority = {2},
+    publisher = {Society of Automotive Engineers (SAE)},
+    title = {{SAE ARP4761 Guidelines and Methods for Conducting the Safety Assessment Process on Civil Airborne Systems and Equipment}},
+    year = {1996}
+}
+
 
 %---------------------
 % Rushby's papers. 
@@ -960,12 +986,7 @@ publisher = {IEEE Computer Society},
 }
 
 
-@PhdThesis{Kelly98arguingsafety,
-  author = 	 {Timothy Patrick Kelly}},
-  title = 	 {Arguing Safety -- A Systematic Approach to Managing Safety Cases},
-  school = 	 {University of York},
-  year = 	 {1998}
-}
+
 
 @Article{simplex,
   author = {Lui Sha},
