--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -407,8 +407,8 @@ OPTnote = {Available at \url{http://www-verimag.imag.fr/index.php?page=techrep-l
   author =       {RTCA},
   howpublished =       {RTCA, Inc.},
   title =        {Software Considerations in Airborne Systems and Equipment Certification},
- note = {RCTA/DO-178B},
-  year =         {1992}
+ note = {{RCTA/DO-178C}},
+  year =         {2011}
   }
 
 @Misc{DO254,
@@ -419,7 +419,13 @@ OPTnote = {Available at \url{http://www-verimag.imag.fr/index.php?page=techrep-l
   year =         {2000}
   }
 
-
+@Misc{DO333,
+  key =       {RTCA},
+  howpublished =       {RTCA, Inc.},
+  title =        {Formal Methods Supplement to DO-178C and DO-278A},
+ note = {{RCTA/DO333}},
+  year =         {2011}
+  }
 
 
 
