--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -15,6 +15,7 @@
 \usepackage{tabularx}
 \usepackage{subfigure}
 \usepackage{fancyhdr}
+\usepackage{fancyvrb}
 \usepackage{paralist}
 \usepackage{listings}
 \usepackage{color}
