cleaning up intro

--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -749,6 +749,20 @@ publisher = {IEEE Computer Society},
   year = 	 {1998}
 }
 
+
+@inproceedings{Knight2002,
+ author = {Knight, John C.},
+ title = {Safety Critical Systems: Challenges and Directions},
+ booktitle = {Proceedings of the 24th International Conference on Software Engineering},
+ series = {ICSE '02},
+ year = {2002},
+ isbn = {1-58113-472-X},
+ location = {Orlando, Florida},
+ pages = {547--550},
+ numpages = {4},
+ publisher = {ACM}
+} 
+
 @Book{Levenson,
   author = 	 {Nancy G. Leveson},
   title = 	 {Engineering a Safer World: Systems Thinking Applied to Safety},
@@ -1957,18 +1971,10 @@ year = "1985"
 } 
 
 
-
-
 @Booklet{ARINC653,
   title = 	 {Avionics Application Software Standard Interface: Part I - Required Services (ARINC Specification 653-2)},
-  OPTkey = 	 {},
- author = 	 {Aeronautical Radio, Incorporated (ARINC)}
-  OPThowpublished = {},
-  OPTaddress = 	 {},
-  OPTmonth = 	 {},
-  OPTyear = 	 {2015},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
+  author = 	 {Aeronautical Radio, Incorporated (ARINC)},
+  year = 	 {2015}
 }
 
 % --------- EDSL -----------
@@ -2030,7 +2036,7 @@ month={March}
 
 
 @Book{NRC14,
-  author = 	 {National Research Council },
+  author = 	 {National Research Council},
   title = 	 {Autonomy Research for Civil Aviation: Toward a New Era of Flight},
   publisher = 	 {The National Academies Press},
   year = 	 {2014}
