--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -108,7 +108,7 @@
 \newcommand{\lee}[1]{\textcolor{blue}{[Lee: #1]}}
 \newcommand{\draft}[1]{\textcolor{red}{\sf [Draft note: #1]}}
 
-\begin{document}
+
 
 \title{Challenges and Opportunities  in Assured Runtime Verification} 
 \titlerunning{Assuring the Guardians}  % abbreviated title (for running head)
@@ -122,14 +122,14 @@
 %
 %%%% list of authors for the TOC (use if author list has to be
 %%%% modified)
-\tocauthor{ Alwyn Goodloe}
+%\tocauthor{ Alwyn Goodloe}
 %
 \institute{
 NASA Langley Research Center,
 Hampton, Virginia, USA, \\
 \email{a.goodloe@nasa.gov}
 }
-
+\begin{document}
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
