--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -42,18 +42,22 @@ system.
 Copilot~\cite{copilot, pike-isse-13}  is an RV framework  targeted at
 safety-critical hard real-realtime systems. Recently, Copilot research
 has  focused on a program on \emph{high-assurance} RV targeting IA
-applications that cannot be assured by conventional means. 
+applications that cannot be assured by conventional means.
 
 
 \paragraph{Contributions'} We will present a number of challenges to
 achieving high-assurance RV that have been identified during the
-course of our investigation.  When appropriate, will survey how we
-have approached these challenge in Copilot.  An general theme of our
-workis the application of lightweight formal methods to achieve
-high-assurance.  RV components are considerably simpler than the
-system as a whole and consequently we have found static analysis and
-other light-weight formal methods tools can play a very effective role
-in high assurance RV.  We will highlight many opportunities for
-applying light-weight formal methods tools to high-assurance RV in
-hopes of fostering greater collaboration between the RV and tool
-communities.
+course of our investigation.  When appropriate, we will survey how we
+have approached these challenge in Copilot.  A running example is  taken
+from our research on using RV to ensure that aircraft  maintain safe
+distance of separation. An general theme of our
+work is the application of lightweight formal methods to achieve
+high-assurance.  Safety is a systems property so the scope of the  challenge
+is necessarily broad ranging from how one arrives at the specification
+to be monitored to necessary capabilities the  RV framework must meet.
+RV components are considerably simpler than the system as a whole and
+consequently we have found static analysis and other light-weight
+formal methods tools can play a very effective role in high assurance
+RV.  We will highlight many opportunities for applying light-weight
+formal methods tools to high-assurance RV in hopes of fostering
+greater collaboration between the RV and tool communities.
