cleaning up some stuff at the back

--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -145,7 +145,7 @@ TBD
 \input{verispec}
 \input{codecorrect}
 \input{steer}
-\input{predictive}
+%\input{predictive}
 %\input{security}
 \input{Related}
 \input{conclusion} 
