--- a/ISoLA16/steer.tex
+++ b/ISoLA16/steer.tex
@@ -1,4 +1,4 @@
-\section{Future Work}\label{sec:future} 
+\section{Additioanl Challanges }\label{sec:future} 
 We  so far examined challenges and opportunities in assured  RV that
 have been addressed in our own research. In this section, we will
 raise  three of the key additional  challenges that we believe need to be
@@ -28,10 +28,9 @@ operating zone.  In many domains, the challenge in constructing an
 assured safe steering algorithm may be as difficult as constructing
 the adaptive autonomous algorithm.
 
-\paragraph{Challenge} 
+\paragraph{Challenge} Can the monitor detect a violation of the specification and invoke the safety controller in time to preserve safe operation.
 
-Complex  real-time cyber-physical systems  are a natural target for
-RV.  Applying RV to  functions such as an  adaptive control system
+Applying RV to application domains such as an  adaptive control system
 that have to act in strict time windows posses  technical
 challenges. The monitor needs to detect  that the adaptive
 controller is about to loose stability in time to  switch to a safe
